--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,13 +5,13 @@ name: Python application
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
     paths:
-      - "db-insert/**"
+      - "db-insert/csv/**"
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
     paths:
-      - "db-insert/**"
+      - "db-insert/csv/**"
 
 jobs:
   build:
@@ -19,19 +19,21 @@ jobs:
     env:
       working-directory: ./db-insert
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-    - name: Install dependencies
-      run: |
-        
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Setting .env
-      run: | 
-        echo "DB_IP_ADDR=${{ secrets.DB_IP_ADDR }}" >> .env
-    - name: Run python
-      run: |
-        python csv_reader.py
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Install dependencies
+        run: |
+
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Setting .env
+        run: |
+          echo "DB_IP_ADDR=${{ secrets.DB_IP_ADDR }}" >> .env
+      - name: Run python
+        env:
+          working-directory: ./db-insert
+        run: |
+          python csv_reader.py
