--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,6 +24,7 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
+
       - name: Install dependencies
         run: |
 
@@ -32,8 +33,8 @@ jobs:
       - name: Setting .env
         run: |
           echo "DB_IP_ADDR=${{ secrets.DB_IP_ADDR }}" >> .env
+
       - name: Run python
-        env:
-          working-directory: ./db-insert
         run: |
+          export PYTHONPATH= ${{ env.working-directory }}
           python csv_reader.py
