--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python application
 
 on:
@@ -31,10 +28,11 @@ jobs:
       - name: Setting .env
         run: |
           echo "DB_IP_ADDR=${{ secrets.DB_IP_ADDR }}" >> .env
-
       - name: Run python
         run: |
           pwd
           cd db-insert
           pwd
-          python csv_reader.py
+          python csv_reader.py | tee output.txt
+      - name: Display output
+        run: cat output.txt
